task_5/yaml/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: net-test
  labels:
    purpose: network-policy-test
