task_5/yaml/deployment.yaml
# deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-app
  namespace: net-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end-app
      role: front-end
  template:
    metadata:
      labels:
        app: front-end-app
        role: front-end
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-api
  namespace: net-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-end-api-app
      role: back-end-api
  template:
    metadata:
      labels:
        app: back-end-api-app
        role: back-end-api
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front-end-app
  namespace: net-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-front-end-app
      role: admin-front-end
  template:
    metadata:
      labels:
        app: admin-front-end-app
        role: admin-front-end
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-back-end-api-app
  namespace: net-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-back-end-api-app
      role: admin-back-end-api
  template:
    metadata:
      labels:
        app: admin-back-end-api-app
        role: admin-back-end-api
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: clients-svc
  namespace: net-test
spec:
  type: ClusterIP
  selector:
    app: nginx-test
    role: client
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: servers-svc
  namespace: net-test
spec:
  type: ClusterIP
  selector:
    app: nginx-test
    role: server
  ports:
  - port: 80
    targetPort: 80
